
====
NEWS
====

- 1.4.44
  * [mod_scgi] fix segfault (fixes #2762)

- 1.4.43 - 2016-10-31
  * [autobuild] remove mod_authn_gssapi dep on resolv
  * [mod_deflate] ignore '*' in deflate.mimetypes
  * [autobuild] omit module stubs when missing deps
  * [TLS] openssl 1.1.0 hides struct bignum_st
  * [autobuild] move http_cgi_ssl_env() for Mac OS X (fixes #2757)
  * [core] use paccept() on NetBSD (replace accept4())
  * [TLS] remote IP conditions are valid for TLS SNI (fixes #2272)
  * [doc] lighttpd-angel.8 (fixes #2254)
  * [cmake] build fcgi-auth, fcgi-responder for tests
  * [mod_accesslog] %{ratio}n logs compression ratio (fixes #2133)
  * [mod_deflate] skip deflate if loadavg too high (fixes #1505)
  * [mod_expire] expire by mimetype (fixes #423)
  * [mod_evhost] partial matching patterns (fixes #1194)
  * build: use CC_FOR_BUILD for lemon when cross-compiling
  * [mod_dirlisting] config header and readme files
  * [config] warn if mod_authn_ldap,mysql not listed
  * fix FastCGI, SCGI, proxy reconnect on failure
  * [core] network_open_file_chunk() temp file opt
  * [mod_rewrite] add more info in error log msg
  * [core] fix fd leak when using libev (fixes #2761)
  * [core] fix potential streaming tempfile corruption (fixes #2760)
  * [mod_scgi] fix prefix matching to always match url
  * [autobuild] adjust Makefile.am for FreeBSD

- 1.4.42 - 2016-10-16
  * [TLS] SSL_shutdown() only if handshake finished
  * [mod_proxy,mod_scgi] shutdown remote only if local (#2743)
  * [core] check if client half-closed TCP if POLLHUP (#2743)
  * [core] enforce wait for POLLWR after EINPROGRESS (fixes #2744)
  * [core] do not enter handler twice after read body
  * [core] proxy,scgi omit shutdown() to backend (fixes #2743)
  * [mod_dirlisting] dirlist does not handle POST
  * [mod_dirlisting] js column sort for dirlist table (fixes #613, fixes #2315)
  * [mod_auth] Digest auth fails after rewrite (fixes #2745)
  * [mod_auth] refactor out auth backend code