@@ -5,6 +5,7 @@ NEWS
 
 - 1.4.44
   * [mod_scgi] fix segfault (fixes #2762)
+  * [mod_authn_gssapi] fix memory leak
 
 - 1.4.43 - 2016-10-31
   * [autobuild] remove mod_authn_gssapi dep on resolv
